--- a/FormApp/app/src/main/res/layout/activity_main.xml
+++ b/FormApp/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/btnGoogleAuth"
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:text="Sign in with Google"/>
+
         <TextView
             android:id="@+id/txtheading"
             android:layout_width="match_parent"
