google sign in commit 2

--- a/FormApp/app/src/main/res/layout/activity_google.xml
+++ b/FormApp/app/src/main/res/layout/activity_google.xml
@@ -5,9 +5,10 @@
     android:gravity="center"
     android:orientation="vertical">
 <TextView
+    android:id="@+id/userNameTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Page 1 Content"
+    android:text="Name"
     android:textColor="#000000"
     android:textSize="18sp" />
     />
