--- a/FormApp/app/src/main/res/layout/activity_login.xml
+++ b/FormApp/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="38dp"
         android:text="Register"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="340dp"
         android:text="Google Sign In"
+        android:onClick="googleSignIn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
