--- a/FormApp/app/src/main/res/layout/activity_login.xml
+++ b/FormApp/app/src/main/res/layout/activity_login.xml
@@ -11,9 +11,9 @@
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="38dp"
         android:text="Register"
 
+        app:layout_constraintBottom_toTopOf="@+id/btnGoogleAuth"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
