--- a/FormApp/app/src/main/res/values/colors.xml
+++ b/FormApp/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="teal_200">#673AB7</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="your_header_color">#8D4DFF</color>
+
     <color name="white">#FFFFFFFF</color>
 </resources>
