--- a/FormApp/app/src/main/res/layout/activity_pager.xml
+++ b/FormApp/app/src/main/res/layout/activity_pager.xml
@@ -49,7 +49,9 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
+            android:background="@drawable/mybutton"
             android:text="Skip"
+            android:textColor="#FFFFFF"
             android:visibility="visible" />
 
         <Button
@@ -58,8 +60,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginLeft="15dp"
+            android:background="@drawable/mybutton"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:textColor="#FFFFFF"
             android:layout_marginBottom="16dp"
             android:text="Launch"
             android:visibility="gone" />
