--- a/FormApp/app/src/main/res/layout/page_layout_2.xml
+++ b/FormApp/app/src/main/res/layout/page_layout_2.xml
@@ -1,23 +1,23 @@
 <!-- First Page Content -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:background="#FFFFFF"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/pageviewer"
+        android:contentDescription="@null"
         android:scaleType="centerCrop"
-        android:contentDescription="@null"/>
+        android:src="@drawable/pageviewer" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Page 2 Content"
-        android:textSize="18sp"
-        android:textColor="#000000"/>
+        android:textColor="#000000"
+        android:textSize="18sp" />
 
 </LinearLayout>
