--- a/FormApp/app/src/main/res/layout/activity_display_details.xml
+++ b/FormApp/app/src/main/res/layout/activity_display_details.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F5F5"
+    android:background="@drawable/bg_2"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="PROFILE"
-        android:textColor="#333333"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="First Name: "
-        android:textColor="#333333"
+        android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
     <TextView
@@ -58,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Last Name: "
-        android:textColor="#333333"
+        android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
     <TextView
@@ -66,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Gender: "
-        android:textColor="#333333"
+        android:textColor="#FFFCFC"
         android:textSize="18sp" />
 
     <TextView
@@ -74,7 +74,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Age: "
-        android:textColor="#333333"
+        android:textColor="#FFFCFC"
         android:textSize="18sp" />
 
     <TextView
@@ -82,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="DOB: "
-        android:textColor="#333333"
+        android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
     <TextView
@@ -90,7 +90,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Email: "
-        android:textColor="#333333"
+        android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
     <TextView
@@ -98,7 +98,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Password: "
-        android:textColor="#333333"
+        android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
     <TextView
@@ -106,7 +106,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Phone No: "
-        android:textColor="#333333"
+        android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
     <TextView
@@ -114,7 +114,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Address: "
-        android:textColor="#333333"
+        android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
     <TextView
@@ -122,7 +122,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="State: "
-        android:textColor="#333333"
+        android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
     <TextView
@@ -130,7 +130,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Pincode: "
-        android:textColor="#333333"
+        android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
     <Button
