--- a/FormApp/app/src/main/res/layout/activity_login.xml
+++ b/FormApp/app/src/main/res/layout/activity_login.xml
@@ -9,14 +9,13 @@
     android:background="@drawable/background">
 
 
-
     <ProgressBar
         android:id="@+id/progressBar"
-
+        android:indeterminateTint="#B38EFF"
         android:layout_width="48dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -150,6 +149,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.893" />
+
 
     <ImageView
         android:id="@+id/btnGoogleAuth"
